Noteworthy changes in release ?.?? (????-??-??)
===============================================

* Improvements
  * Added an interface of raising des Strausses awareness.
  * Added --tips option to print strace tips, tricks, and tweaks
    at the end of the tracing session.
  * Enhanced decoding of bpf and io_uring_register syscalls.
  * Updated lists of BPF_*, BR_*, BTRFS_*, IFA_*, IFLA_*, IORING_*, KEY_*,
    KVM_*, MADV_*, and UFFD_* constants.
  * Updated lists of ioctl commands from Linux 5.18.

* Bug fixes
  * Fixed printing of the updated value of union bpf_attr.next_id
    on the exiting of bpf(BPF_*_GET_NEXT_ID) calls.

Noteworthy changes in release 5.17 (2022-03-26)
===============================================

* Improvements
  * Added 64-bit LoongArch architecture support.
  * Extended personality designation syntax of syscall specification expressions
    to support all@pers and %class@pers.
  * Enhanced rejection of invalid syscall numbers in syscall specification
    expressions.
  * Implemented decoding of set_mempolicy_home_node syscall, introduced
    in Linux 5.17.
  * Implemented decoding of IFLA_GRO_MAX_SIZE and TCA_ACT_IN_HW_COUNT netlink
    attributes.
  * Implemented decoding of PR_SET_VMA operation of prctl syscall.
  * Implemented decoding of siginfo_t.si_pkey field.
  * Implemented decoding of LIRC ioctl commands.
  * Updated lists of FAN_*, IORING_*, IOSQE_*, KEY_*, KVM_*, MODULE_INIT_*,
    TCA_ACT_*, and *_MAGIC constants.
  * Updated lists of ioctl commands from Linux 5.17.

Noteworthy changes in release 5.16 (2022-01-10)
===============================================

* Improvements
  * Implemented --secontext=mismatch option to find mismatches in SELinux
    contexts.
  * Implemented decoding of futex_waitv syscall introduced in Linux 5.16.
  * Implemented decoding of BPF_LINK_GET_NEXT_ID and BPF_LINK_GET_FD_BY_ID bpf
    syscall commands.
  * Enhanced decoding of BPF_MAP_CREATE, BPF_PROG_TEST_RUN, and BPF_PROG_LOAD