@@ -1,0 +1,9 @@
+#enum
+#value_indexed
+#unconditional
+COUNTER_COMPONENT_NONE			0
+COUNTER_COMPONENT_SIGNAL		1
+COUNTER_COMPONENT_COUNT			2
+COUNTER_COMPONENT_FUNCTION		3
+COUNTER_COMPONENT_SYNAPSE_ACTION	4
+COUNTER_COMPONENT_EXTENSION		5
