@@ -1,0 +1,9 @@
+#enum
+#value_indexed
+#unconditional
+COUNTER_EVENT_OVERFLOW			0
+COUNTER_EVENT_UNDERFLOW			1
+COUNTER_EVENT_OVERFLOW_UNDERFLOW	2
+COUNTER_EVENT_THRESHOLD			3
+COUNTER_EVENT_INDEX			4
+COUNTER_EVENT_CHANGE_OF_STATE		5
