@@ -1,0 +1,2 @@
+#define XLAT_VERBOSE 1
+#include "ioctl_counter.c"
